--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "todo-list",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.13.1",
+    "node": "10.15.3"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
