--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
     "react-big-calendar": "^0.24.6",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-loading-overlay": "^1.0.1",
+    "react-overlays": "^3.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "^5.1.0"
